# apricity

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
mempalace_dashboard/: __init__.py  __main__.py  server.py
mempalace_dashboard/static/: app.js  index.html  lab.js  styles.css
mempalace_dashboard/static/icons/: ATTRIBUTION.md
static/: app.js  index.html  styles.css
