[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apricity"
version = "0.6.0"
description = "Apricity — a local, zero-dependency front-end for the MemPalace personal-memory system. Browse, search, edit, and curate your memories and knowledge graph from your browser."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Apricity contributors" }]
keywords = [
    "apricity",
    "mempalace",
    "ai-memory",
    "knowledge-graph",
    "local-first",
    "dashboard",
    "chromadb",
    "mcp",
    "second-brain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Runtime: standard library only.
dependencies = []

[project.urls]
Homepage      = "https://github.com/epinethrone/apricity"
Repository    = "https://github.com/epinethrone/apricity"
Issues        = "https://github.com/epinethrone/apricity/issues"
Changelog     = "https://github.com/epinethrone/apricity/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/epinethrone/apricity/issues"
"Source"      = "https://github.com/epinethrone/apricity"

[project.scripts]
apricity = "mempalace_dashboard.server:main"
# Deprecated alias — keeps existing `mempalace-dashboard` launchers and
# service units working after the rename to Apricity. Slated for removal
# in a future major version.
mempalace-dashboard = "mempalace_dashboard.server:main"

[tool.setuptools.packages.find]
include = ["mempalace_dashboard*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
mempalace_dashboard = [
    "static/*.html",
    "static/*.js",
    "static/*.css",
    "static/*.png",
    "static/*.ico",
]
